# serial-port-monitor

./: .releaserc  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  arduinoserialportcommunicationapp.cpp  arduinoserialportcommunicationapp.h  arduinoserialportcommunicationwindow.cpp  arduinoserialportcommunicationwindow.h  examplewindow.cpp  examplewindow.h  main.cpp  spmonitorapp.cpp  spmonitorapp.h  spmonitorappprefs.cpp  spmonitorappprefs.h  spmonitorappwindow.cpp  spmonitorappwindow.h  todo.md
.github/workflows/: cmake-single-platform.yml  main.yml  stable-release.yml
lib/: external-dependencies.cmake
resources/: AppImageBuilder.yml.in  CMakeLists.txt  about_dialog.ui  about_text.xml  gears_menu.ui  gresource.xml  org.gtkmm.spmonitor.gschema.xml  sp-monitor.desktop.in  spmonitorapp.desktop.in  view.ui  welcome_msg.xml  window.ui
resources/ui/: gears_menu.ui  open_serial_port.ui  prefs.ui  view.ui
scripts/: CMakeLists.txt  appimage-builder-wrapper.sh  configure_install_temp_tty0tty.sh  run-dev-app.sh
src/: main.cpp  spm_about_dialog.cpp  spm_about_dialog.h  spm_app.cpp  spm_app.h  spm_app_prefs_dialog.cpp  spm_app_prefs_dialog.h  spm_app_window.cpp  spm_app_window.h  spm_open_serial_port_dialog.cpp  spm_open_serial_port_dialog.h
src/utils/: dynamic_buffer.h  serialport.cpp  serialport.h  sp_worker.cpp  sp_worker.h  utils.cpp  utils.h
